--- a/secret.html
+++ b/secret.html
@@ -5,14 +5,16 @@
     </head>
     <body>
         <h2>This is a secret message!</h2>
-        <???>
+        <form>
             <???>Name:</???>
-            <??? type="???" id="name">
-            <br>
+            <input type="???" id="name">
+            <br><br>
             <???>Email:</???>
-            <??? type="???" id="email">
+            <input type="???" id="email">
             <br>
             <??? type="???">
-        </???>
+            <br>
+            <button ??? ="???">Submit</button> 
+        </form>
     </body>
 </html>
