added email type, going to TA if error again

--- a/secret.html
+++ b/secret.html
@@ -6,15 +6,13 @@
     <body>
         <h2>This is a secret message!</h2>
         <form>
-            <???>Name:</???>
-            <input type="???" id="name">
+            Name:
+            <input type="text" id="name">
             <br><br>
-            <???>Email:</???>
-            <input type="???" id="email">
-            <br>
-            <??? type="???">
-            <br>
-            <button ??? ="???">Submit</button> 
+            Email:
+            <input type="email" id="email">
+            <br><br>
+            <button>Submit</button> 
         </form>
     </body>
 </html>
