--- a/secret.html
+++ b/secret.html
@@ -6,10 +6,10 @@
     <body>
         <h2>This is a secret message!</h2>
         <form>
-            Name:
+            <label>Name:</label>
             <input type="text" id="name">
             <br><br>
-            Email:
+            <label>Email:</label>
             <input type="email" id="email">
             <br><br>
             <button>Submit</button> 
